--- a/app/src/main/res/layout/activity_materias.xml
+++ b/app/src/main/res/layout/activity_materias.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CartasActivity">
+    tools:context=".MateriasActivity">
 
     <ListView
-        android:id="@+id/lvCartas"
+        android:id="@+id/lvMaterias"
         android:layout_width="405dp"
         android:layout_height="603dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -16,16 +16,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
-
-    <Button
-        android:id="@+id/btnAdd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Adicionar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lvCartas"
-        app:layout_constraintVertical_bias="0.268" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
